# mlp

./: index.html  package-lock.json  package.json
api/: train-models.py
experiments/waste-image-classifier-poc/: .gitignore  README.md  build_backend.py  pyproject.toml  requirements.txt
experiments/waste-image-classifier-poc/configs/: clip_vit_b32_frozen_head.yaml  efficientnet_b0_baseline.yaml
experiments/waste-image-classifier-poc/data/external_images/: external_manifest.csv
experiments/waste-image-classifier-poc/docs/: EXTERNAL_IMAGES_CHECKLIST.md  MODEL_CARD_TEMPLATE.md
experiments/waste-image-classifier-poc/scripts/: build_manifest.py  compare_models.py  download_trashnet.py  evaluate.py  evaluate_external.py  predict.py  run_poc.py  train.py
experiments/waste-image-classifier-poc/src/waste_poc/: __init__.py  calibration.py  clip_candidate.py  config.py  data.py  device.py  external_io.py  external_metrics.py  images.py  inference.py  manifests.py  metrics.py  model.py  model_selection.py  orchestration.py  reporting.py  thresholding.py  training_selection.py  utils.py
experiments/waste-image-classifier-poc/tests/: test_clip_candidate.py  test_device.py  test_external_metrics.py  test_image_loading.py  test_label_contract.py  test_manifest_splitting.py  test_phase_0_6.py  test_run_poc.py  test_thresholding.py
ml-training-service/: Dockerfile  README.md  main.py  requirements.txt  test_explanations.py
src/: App.tsx  index.css  main.tsx
src/components/: AppShell.tsx  PipeCard.tsx  ProtectedRoute.tsx
src/data/: mockPipes.ts
src/lib/: auth.tsx  (+2 more)
(+29 files in other folders)
